style logo and responsive font-size

--- a/ClientApp/src/style/_styles.scss
+++ b/ClientApp/src/style/_styles.scss
@@ -6,7 +6,6 @@
 }
 
 #main-menu {
-  background-color: #303F73;
   display: block;
   transition: all 0.3s ease-out;
 
@@ -41,6 +40,7 @@
         line-height: 40px;
         transition: all 0.3s ease-out;
         font-weight: 530;
+        white-space: nowrap;
       }
     }
 
@@ -56,8 +56,11 @@
       transition: all 0.2s ease-out;
 
       li a {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         font-weight: 500;
+        overflow: hidden;
+        max-width: 100%;
+        text-overflow: ellipsis;
 
         &:hover {
           font-style: italic;
@@ -68,7 +71,8 @@
 
     &.menu {
       margin: auto;
-      @include element-center;
+      flex-wrap: nowrap;
+       @include element-center;
     }
   }
 }
@@ -126,7 +130,15 @@
   padding-right: 15px;
 }
 
+html {
+  font-size: 13px;
+}
+
 @media (min-width: 576px) {
+  html {
+    font-size: 14px;
+  }
+
   .container {
     max-width: 540px;
   }
@@ -137,6 +149,9 @@
 }
 
 @media (min-width: 768px) {
+  html {
+    font-size: 14.5px;
+  }
   .container {
     max-width: 720px;
   }
@@ -147,6 +162,9 @@
 }
 
 @media (min-width: 992px) {
+  html {
+    font-size: 15px;
+  }
   .container {
     max-width: 960px;
   }
@@ -157,6 +175,9 @@
 }
 
 @media (min-width: 1200px) {
+  html {
+    font-size: 15.5px;
+  }
   .container {
     max-width: 1140px;
   }
@@ -167,6 +188,10 @@
 }
 
 @media (min-width: 1280px) {
+  html {
+    font-size: 16px;
+  }
+
   .container {
     max-width: 1190px;
   }
@@ -207,4 +232,9 @@
       visibility: visible;
     }
   }
+}
+
+.side-nav-logo {
+  height: 45px !important;
+  width: 80px !important;
 }
